css/style.css
/* ... */
.ip-stib-btn {
    display: inline-block;
    margin-top: 25px;
    padding: 12px 30px;
    background: #8b4513;
    color: #fff;
    border-radius: 50px;
    font-weight: 700;
    text-decoration: none;
    transition: 0.3s;
}

.ip-stib-btn:hover { 
	background: #c9a227;
	color: black; }

/* 6. ÉQUIPE */
.row.mt-5 {
    display: flex;
    flex-wrap: wrap;
}
.team-item {
    flex: 1; /* C'est ce "1" qui force la carte à remplir toute la hauteur */
    display: flex;
    flex-direction: column;
    background: #d4b483;
    padding: 30px 20px;
    border: 1px solid #8b4513;
    border-radius: 10px;
    transition: all 0.4s ease;
    text-align: center;
    /* On enlève le margin-bottom d'ici car il est géré par l'article au-dessus */
    margin-bottom: 0; 
}
.team-item { 
	text-align: center; 
	border: 1px solid #8b4513; 
	padding: 30px 20px; 
	border-radius: 10px; 
	transition: all 0.4s ease; 
	margin-bottom: 30px;
    background: #f5f0e8;
}

.team-item:hover {
    transform: translateY(-10px); /* La carte monte */
    box-shadow: 0 10px 20px rgba(0,0,0,0.1); /* Petite ombre portée */
    border-color: #c9a227;
}

.team-photo img { 
	border-radius: 50%; 
	width: 140px; 
	height: 140px; 
	object-fit: cover; 
	border: 3px solid #8b4513; 
	margin-bottom: 20px;
    transition: transform 0.4s ease; 
    object-fit: cover;
    object-position: 50% 5%;/*Ajuste position (Axe X / Axe Y) */
}

.team-item:hover .team-photo img {
    transform: scale(1.1);
    border: 3px solid #c9a227;
}

.team-role { 
	color: #8b4513; 
	font-weight: 700; 
	text-transform: uppercase; 
	font-size: 12px; 
    transition: letter-spacing 0.3s;
}

.team-item:hover .team-role {
    letter-spacing: 1px;
}

/* 7. SPECIFIQUE INSCRIPTION (RADIOS & DOCS) */
.radio-group-container {
    border: none;
    padding: 0;
    margin: 10px 0 25px 0;
}
.radio-group {
    display: flex;
    gap: 30px;
}
.radio-item {
    display: flex;
    align-items: top;
    gap: 10px;
    cursor: pointer;
    font-size: 14px;
}
.radio-item input[type="radio"] {
    accent-color: #8b4513;
    width: 18px;
    height: 18px;
}


/* --- 8. AJUSTEMENTS MISE EN PAGE INSCRIPTION --- */

/* On s'assure que la colonne de droite respire */
.contact-info-wrapper {
    margin-top: 40px;
}

/* Espacement pour le titre secondaire à droite */
.contact-subtitle {
    font-size: 22px;
    font-weight: 600;
    margin-bottom: 25px;
    color: #151618;
    display: block;
}

/* On aère les blocs d'adresses pour qu'ils ne soient pas collés */
.contact-info .ci-address {
    margin-bottom: 30px; 
    padding: 20px;
    border: 1px solid #eee;
    border-radius: 4px;
    background: #f5f0e8;
    border-top: 4px solid #c9a227;
}

/*---------------------
  Club Section
-----------------------*/

.club-section {
	padding-top: 80px;
	padding-bottom: 70px;
}

.club-content .cc-pic {
	text-align: center;
}

.club-content .cc-text .ct-title {
	margin-bottom: 45px;
}

.club-content .cc-text .ct-title h3 {
	font-size: 28px;
	color: #151618;
	font-weight: 500;
	margin-bottom: 30px;
}

.club-content .cc-text .ct-widget ul li {
	list-style: none;
	display: inline-block;
	width: 30%;
	margin-bottom: 12px;
}

.club-content .cc-text .ct-widget ul li h5 {
	color: #151618;
	font-weight: 500;
	margin-bottom: 8px;
}

.club-content .cc-text .ct-widget ul li .cw-social a {
	display: inline-block;
	color: #636363;
	margin-right: 20px;
}

.club-content .cc-text .ct-widget ul li .cw-social a:last-child {
	margin-right: 0;
}

.club-tab-list {
	margin-top: 30px;
}

.club-tab-list .nav {
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	padding-bottom: 48px;
	border-bottom: 1px solid #e5e5e5;
}

.club-tab-list .nav .nav-item {
	margin-right: 45px;
}

.club-tab-list .nav .nav-item:last-child {
	margin-right: 0px;
}

.club-tab-list .nav .nav-item .nav-link {
	color: #ababab;
	font-weight: 500;
	font-size: 18px;
	background: transparent;
	border: none;
	padding: 0;
}

.club-tab-list .nav .nav-item .nav-link.active {
	color: #151618;
}

.club-tab-list .tab-content .club-tab-content .ct-item {
	overflow: hidden;
	padding: 20px 0;
	border-bottom: 1px solid #e5e5e5;
}

.club-tab-list .tab-content .club-tab-content .ct-item .ci-text {
	float: left;
}

.club-tab-list .tab-content .club-tab-content .ct-item .ci-text img {
	height: 70px;
	width: 70px;
	float: left;
	margin-right: 20px;
}

.club-tab-list .tab-content .club-tab-content .ct-item .ci-text h5 {
	color: #151618;
	font-weight: 500;
	overflow: hidden;
	padding-top: 24px;
}

.club-tab-list .tab-content .club-tab-content .ct-item .ci-name {
	float: right;
	color: #636363;
	font-size: 18px;
	font-weight: 500;
	padding-top: 22px;
}

/*-------------------------------- Respinsive Media Styles --------------------------------*/

@media only screen and (min-width: 1301px) and (max-width: 1750px) {
	.trending-news-section .tn-title {
		width: 25%;
	}
}

@media only screen and (min-width: 1200px) and (max-width: 1300px) {
	.trending-news-section .tn-title {
		width: 22%;
	}
}

@media only screen and (min-width: 1200px) {
	.container {
		max-width: 1200px;
	}
}

/* Medium Device: 1200px */

@media only screen and (min-width: 992px) and (max-width: 1199px) {
	.header__nav .nav-menu .main-menu li {
		margin-right: 40px;
	}
	.ms-content .mc-table table tr td.left-team {
		padding-left: 15px;
	}
	.ms-content .mc-table table tr td.right-team {
		padding-right: 15px;
	}
	.club-content .cc-text .ct-widget ul li {
		width: 33.33%;
	}
	.trending-news-section .tn-title {
		width: 25%;
	}
	.left-blog-pad {
		padding-right: 15px;
	}
}
/* ... */

